name:           ariadne-cardano
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , acid-state
    , ansi-wl-pprint
    , ariadne-core
    , async
    , beam-core
    , beam-migrate
    , beam-sqlite
    , bytestring
    , Cabal
    , cardano-crypto
    , cardano-sl
    , cardano-sl-binary
    , cardano-sl-block
    , cardano-sl-client
    , cardano-sl-core
    , cardano-sl-crypto
    , cardano-sl-db
    , cardano-sl-generator
    , cardano-sl-infra
    , cardano-sl-networking
    , cardano-sl-ssc
    , cardano-sl-txp
    , cardano-sl-update
    , cardano-sl-util
    , componentm
    , conduit
    , constraints
    , containers
    , contravariant
    , cryptonite
    , data-default
    , dhall
    , directory
    , Earley
    , exceptions
    , file-embed
    , filepath
    , formatting
    , http-client
    , http-client-tls
    , insert-ordered-containers
    , ixset-typed
    , knit
    , lens
    , log-warper
    , loot-crypto
    , megaparsec
    , memory
    , MissingH
    , monad-control
    , mtl
    , named
    , natural-transformation
    , ntype
    , optparse-applicative
    , process
    , QuickCheck
    , resourcet
    , retry
    , safe
    , safe-exceptions
    , safecopy
    , scientific
    , serokell-util
    , spoon
    , sqlite-simple
    , sqlite-simple-errors
    , stm
    , template-haskell
    , text
    , text-format
    , time
    , time-units
    , transformers
    , transformers-base
    , universum
    , unliftio
    , unliftio-core
    , unordered-containers
    , vector
    , vinyl
    , yaml
  exposed-modules:
      Ariadne.Cardano.Knit
      Ariadne.Cardano.Backend
      Ariadne.Cardano.Face
      Ariadne.Cardano.Orphans

      Ariadne.Config.Wallet
      Ariadne.Config.Ariadne
      Ariadne.Config.CLI
      Ariadne.Config.Cardano
      Ariadne.Config.History
      Ariadne.Config.Update
      Ariadne.Config.DhallUtil
      Ariadne.Config.TH

      Ariadne.MainTemplate

      Ariadne.Update.Backend

      Ariadne.Wallet.Knit
      Ariadne.Wallet.Backend
      Ariadne.Wallet.Backend.AddressDiscovery
      Ariadne.Wallet.Backend.KeyStorage
      Ariadne.Wallet.Backend.Mode
      Ariadne.Wallet.Backend.Restore
      Ariadne.Wallet.Backend.Tx
      Ariadne.Wallet.Face
      Ariadne.Wallet.UiAdapter

      Ariadne.Wallet.Cardano.Kernel
      Ariadne.Wallet.Cardano.Kernel.Accounts
      Ariadne.Wallet.Cardano.Kernel.Actions
      Ariadne.Wallet.Cardano.Kernel.Addresses
      Ariadne.Wallet.Cardano.Kernel.Bip32
      Ariadne.Wallet.Cardano.Kernel.Bip39
      Ariadne.Wallet.Cardano.Kernel.Bip44
      Ariadne.Wallet.Cardano.Kernel.DB.AcidState
      Ariadne.Wallet.Cardano.Kernel.DB.BlockMeta
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Create
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Delete
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Derivation
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Read
      Ariadne.Wallet.Cardano.Kernel.DB.HdWallet.Update
      Ariadne.Wallet.Cardano.Kernel.DB.InDb
      Ariadne.Wallet.Cardano.Kernel.DB.Resolved
      Ariadne.Wallet.Cardano.Kernel.DB.Spec
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Read
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Update
      Ariadne.Wallet.Cardano.Kernel.DB.Spec.Util
      Ariadne.Wallet.Cardano.Kernel.DB.Sqlite
      Ariadne.Wallet.Cardano.Kernel.DB.TxMeta
      Ariadne.Wallet.Cardano.Kernel.DB.TxMeta.Types
      Ariadne.Wallet.Cardano.Kernel.DB.Util.AcidState
      Ariadne.Wallet.Cardano.Kernel.DB.Util.IxSet
      Ariadne.Wallet.Cardano.Kernel.Decrypt
      Ariadne.Wallet.Cardano.Kernel.Internal
      Ariadne.Wallet.Cardano.Kernel.Keystore
      Ariadne.Wallet.Cardano.Kernel.PrefilterTx
      Ariadne.Wallet.Cardano.Kernel.Types
      Ariadne.Wallet.Cardano.Kernel.Util
      Ariadne.Wallet.Cardano.Kernel.Wallets
      Ariadne.Wallet.Cardano.Kernel.Word31
      Ariadne.Wallet.Cardano.WalletLayer
      Ariadne.Wallet.Cardano.WalletLayer.Kernel
      Ariadne.Wallet.Cardano.WalletLayer.Types
  default-extensions:
      ApplicativeDo
      BangPatterns
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DeriveFoldable
      DeriveFunctor
      DeriveGeneric
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NegativeLiterals
      NoImplicitPrelude
      OverloadedLabels
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  other-modules:
      Paths_ariadne_cardano
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints

  build-tools: cpphs >= 1.19

test-suite ariadne-cardano-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ariadne-cardano
    , ariadne-core
    , bytestring
    , canonical-json
    , cardano-sl
    , cardano-sl-core
    , cardano-sl-infra
    , hspec
    , knit
    , lens
    , ntype
    , optparse-applicative
    , QuickCheck
    , scientific
    , serokell-util
    , spoon
    , text
    , time-units
    , universum
    , yaml
  other-modules:
      Paths_ariadne_cardano
      Test.Ariadne.Cardano.Arbitrary
      Test.Ariadne.Wallet.Arbitrary
      Test.Ariadne.Knit
  default-language: Haskell2010
  default-extensions:
        ApplicativeDo
        BangPatterns
        ConstraintKinds
        DataKinds
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveTraversable
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MonadFailDesugaring
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NegativeLiterals
        NoImplicitPrelude
        OverloadedStrings
        PartialTypeSignatures
        PatternSynonyms
        PolyKinds
        RankNTypes
        RecordWildCards
        RecursiveDo
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        ViewPatterns
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints
