name:           ariadne-core
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-wl-pprint
    , async
    , containers
    , formatting
    , knit
    , lens
    , megaparsec
    , sqlite-simple
    , text
    , universum
    , Earley
    , ii-extras
    , vinyl
  exposed-modules:
      Ariadne.TaskManager.Knit
      Ariadne.TaskManager.Backend
      Ariadne.TaskManager.Face
      Ariadne.Knit.Backend
      Ariadne.Knit.Face
      Ariadne.Knit.Help
      Ariadne.UX.CommandHistory
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      NamedFieldPuns
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints
               -Wno-unused-top-binds

  build-tools: cpphs >= 1.19
