name:           ariadne-core
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-wl-pprint
    , async
    , containers
    , componentm
    , formatting
    , knit
    , lens
    , megaparsec
    , ntype
    , sqlite-simple
    , text
    , transformers
    , universum
    , Earley
  exposed-modules:
      Ariadne.TaskManager.Knit
      Ariadne.TaskManager.Backend
      Ariadne.TaskManager.Face
      Ariadne.Knit.Backend
      Ariadne.Knit.Face
      Ariadne.Knit.Help
      Ariadne.Util
      Ariadne.UX.CommandHistory
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      NamedFieldPuns
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
  default-language: Haskell2010
  ghc-options:
      -- Source: https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
      -Weverything
      -Wno-missing-exported-signatures
      -Wno-missing-import-lists
      -Wno-missed-specialisations
      -Wno-all-missed-specialisations
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-local-signatures
      -Wno-monomorphism-restriction
      -Werror

  build-tools: cpphs >= 1.19
