name:           ariadne-cli-lib
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      ansi-wl-pprint
    , base >=4.7 && <5
    , componentm
    , haskeline
    , loc
    , text
    , universum

  exposed-modules:
      Ariadne.UI.Cli
      Ariadne.UI.Cli.Face
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options:
      -- Source: https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
      -Weverything
      -Wno-missing-exported-signatures
      -Wno-missing-import-lists
      -Wno-missed-specialisations
      -Wno-all-missed-specialisations
      -Wno-unsafe
      -Wno-safe
      -Wno-missing-local-signatures
      -Wno-monomorphism-restriction
      -Werror
      -- Extra flag for ariadne-{vty,qt,cli}-lib
      -Wno-unused-top-binds
