name:           ariadne-qt-lib
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Custom
cabal-version:  >= 1.10

extra-source-files:
  resources/ariadne-qt.qrc
  resources/images/*.png
  resources/museo/*.ttf
  resources/museo/*.otf
  resources/stylesheet.qss

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , universum
    , serokell-util
    , text
    , ansi-wl-pprint
    , containers
    , componentm
    , hoppy-runtime
    , loc
    , qtah
    , stm
    , extra
    , ansi-terminal
    , formatting
    , lens
    , ii-extras
    , html-entities
    , file-embed
    , bytestring

  exposed-modules:
      Ariadne.UI.Qt
      Ariadne.UI.Qt.Face
  other-modules:
      Ariadne.UI.Qt.AnsiToHTML
      Ariadne.UI.Qt.UI
      Ariadne.UI.Qt.MainWindow
      Ariadne.UI.Qt.StyleSheet
      Ariadne.UI.Qt.Widgets.Dialogs.NewWallet
      Ariadne.UI.Qt.Widgets.Help
      Ariadne.UI.Qt.Widgets.Logs
      Ariadne.UI.Qt.Widgets.Repl
      Ariadne.UI.Qt.Widgets.TopBar
      Ariadne.UI.Qt.Widgets.Wallet
      Ariadne.UI.Qt.Widgets.WalletInfo
      Ariadne.UI.Qt.Widgets.WalletTree
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds -dynamic

custom-setup
  setup-depends:
      base
    , Cabal
