name:           ariadne-qt-ui
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , universum
    , ansi-wl-pprint
    , brick
    , containers
    , hoppy-runtime
    , loc
    , qtah-qt5

  exposed-modules:
      Ariadne.UI.Qt
      Ariadne.UI.Qt.Face
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds -dynamic
