name:           ariadne-qt
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ilist
    , universum
    , serokell-util
    , text
    , ansi-wl-pprint
    , containers
    , hoppy-runtime
    , loc
    , qtah
    , stm
    , extra
    , ansi-terminal
    , formatting
    , lens
    , ii-extras
    , html-entities

  exposed-modules:
      Ariadne.UI.Qt
      Ariadne.UI.Qt.Face
  other-modules:
      Ariadne.UI.Qt.AnsiToHTML
      Ariadne.UI.Qt.UI
      Ariadne.UI.Qt.MainWindow
      Ariadne.UI.Qt.Widgets.Help
      Ariadne.UI.Qt.Widgets.Logs
      Ariadne.UI.Qt.Widgets.MenuBar
      Ariadne.UI.Qt.Widgets.Repl
      Ariadne.UI.Qt.Widgets.StatusBar
      Ariadne.UI.Qt.Widgets.Wallet
      Ariadne.UI.Qt.Widgets.WalletInfo
      Ariadne.UI.Qt.Widgets.WalletTree
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds -dynamic

executable ariadne-qt
  main-is: Main.hs
  other-modules: Glue
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-wl-pprint
    , ariadne
    , ariadne-qt
    , async
    , base >=4.7 && <5
    , containers
    , double-conversion
    , ii-extras
    , ilist
    , cardano-sl-core
    , knit
    , lens
    , text
    , universum
    , vinyl
  other-modules:
      Paths_ariadne_qt
  default-language: Haskell2010
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
      EmptyCase
      PartialTypeSignatures
  ghc-options: -Wall -Wcompat -Werror
               -Wincomplete-uni-patterns -Wincomplete-record-updates
               -Wredundant-constraints
               -dynamic
