name:           ariadne-vty-lib
version:        0.2.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MPL-2.0
license-file:   COPYING.md
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      ansi-wl-pprint
    , ansi-terminal
    , base >=4.7 && <5
    , brick
    , componentm
    , containers
    , directory
    , Hclip
    , vty
    , text
    , lens
    , transformers
    , loc
    , text-zipper
    , serokell-util
    , vector
    , ii-extras
    , named
    -- UI is independent of Knit, but provides Knit command bindings
    , knit
    , Earley
    , universum

  exposed-modules:
      Ariadne.UI.Vty
      Ariadne.UI.Vty.App
      Ariadne.UI.Vty.AnsiToVty
      Ariadne.UI.Vty.Face
      Ariadne.UI.Vty.Focus
      Ariadne.UI.Vty.Keyboard
      Ariadne.UI.Vty.Knit
      Ariadne.UI.Vty.Scrolling
      Ariadne.UI.Vty.Theme
      Ariadne.UI.Vty.Widget
      Ariadne.UI.Vty.Widget.About
      Ariadne.UI.Vty.Widget.Account
      Ariadne.UI.Vty.Widget.AddWallet
      Ariadne.UI.Vty.Widget.Form.Button
      Ariadne.UI.Vty.Widget.Form.Checkbox
      Ariadne.UI.Vty.Widget.Form.Edit
      Ariadne.UI.Vty.Widget.Form.List
      Ariadne.UI.Vty.Widget.Form.Send
      Ariadne.UI.Vty.Widget.Help
      Ariadne.UI.Vty.Widget.Logs
      Ariadne.UI.Vty.Widget.Menu
      Ariadne.UI.Vty.Widget.Repl
      Ariadne.UI.Vty.Widget.Status
      Ariadne.UI.Vty.Widget.Tree
      Ariadne.UI.Vty.Widget.Wallet
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MonadFailDesugaring
      MultiParamTypeClasses
      MultiWayIf
      NamedFieldPuns
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds
