name:           ariadne-vty-ui
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/serokell/ariadne#readme>
homepage:       https://github.com/serokell/ariadne#readme
bug-reports:    https://github.com/serokell/ariadne/issues
license:        MIT
license-file:   LICENSE
author:         @serokell
maintainer:     Serokell <hi@serokell.io>
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/serokell/ariadne

library
  hs-source-dirs:
      src
  build-depends:
      ansi-wl-pprint
    , ansi-terminal
    , base >=4.7 && <5
    , brick
    , containers
    , directory
    , Hclip
    , vty
    , text
    , lens
    , transformers
    , loc
    , text-zipper
    , serokell-util
    , vector
    , ii-extras
    , named
    -- UI is independent of Knit, but provides Knit command bindings
    , knit
    , Earley
    , universum

  exposed-modules:
      Ariadne.UI.Vty
      Ariadne.UI.Vty.App
      Ariadne.UI.Vty.AnsiToVty
      Ariadne.UI.Vty.Clipboard
      Ariadne.UI.Vty.CommandHistory
      Ariadne.UI.Vty.Widget.Help
      Ariadne.UI.Vty.Widget.Logs
      Ariadne.UI.Vty.Widget.Menu
      Ariadne.UI.Vty.Widget.Repl
      Ariadne.UI.Vty.Widget.Status
      Ariadne.UI.Vty.Widget.WalletTree
      Ariadne.UI.Vty.Widget.WalletPane
      Ariadne.UI.Vty.Face
      Ariadne.UI.Vty.Keyboard
      Ariadne.UI.Vty.Knit
      Ariadne.UI.Vty.Scrolling
      Ariadne.UI.Vty.Theme
  default-extensions:
      ApplicativeDo
      NoImplicitPrelude
      BangPatterns
      ConstraintKinds
      DataKinds
      DeriveGeneric
      DeriveFunctor
      DeriveFoldable
      DeriveTraversable
      EmptyCase
      FlexibleContexts
      FlexibleInstances
      GADTs
      GeneralizedNewtypeDeriving
      LambdaCase
      MultiParamTypeClasses
      MultiWayIf
      NegativeLiterals
      OverloadedStrings
      OverloadedLabels
      PatternSynonyms
      PolyKinds
      RankNTypes
      RecordWildCards
      RecursiveDo
      ScopedTypeVariables
      StandaloneDeriving
      TemplateHaskell
      TupleSections
      TypeApplications
      TypeFamilies
      TypeOperators
      UndecidableInstances
      ViewPatterns
  default-language: Haskell2010
  ghc-options: -Wall -Werror -Wno-unused-top-binds
